{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 49,
  "lineage": "f49428fd-d72b-6689-5c04-3964c87cd717",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "Terra_Nat_Eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07f8a339186da25fb",
            "arn": "arn:aws:ec2:us-east-1:359468415516:elastic-ip/eipalloc-07f8a339186da25fb",
            "domain": "vpc",
            "id": "eipalloc-07f8a339186da25fb",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-98-84-248-183.compute-1.amazonaws.com",
            "public_ip": "98.84.248.183",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Terra_Nat_Eip"
            },
            "tags_all": {
              "Name": "Terra_Nat_Eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Terra_Igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:359468415516:internet-gateway/igw-080c15cc61b50ae1c",
            "id": "igw-080c15cc61b50ae1c",
            "owner_id": "359468415516",
            "tags": {
              "Name": "Terra_Igw"
            },
            "tags_all": {
              "Name": "Terra_Igw"
            },
            "vpc_id": "vpc-04d2fd3f8c9d56645"
          },
          "dependencies": [
            "aws_vpc.Terra_Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "Terra_Ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07f8a339186da25fb",
            "association_id": "eipassoc-0ebcc1990c6b0d104",
            "connectivity_type": "public",
            "id": "nat-080587abf865e6b39",
            "network_interface_id": "eni-06a75a7a1fb96dcf0",
            "private_ip": "10.0.1.231",
            "public_ip": "98.84.248.183",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07b6a9cff116d11ec"
          },
          "dependencies": [
            "aws_eip.Terra_Nat_Eip",
            "aws_subnet.Terra_PSN1",
            "aws_vpc.Terra_Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01f54b1420d269fc61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-080587abf865e6b39",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01f54b1420d269fc6",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.Terra_Nat_Eip",
            "aws_nat_gateway.Terra_Ngw",
            "aws_route_table.private",
            "aws_subnet.Terra_PSN1",
            "aws_vpc.Terra_Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-080c15cc61b50ae1c",
            "id": "r-rtb-051d246fea7daf1301080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-051d246fea7daf130",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Terra_Igw",
            "aws_route_table.public",
            "aws_vpc.Terra_Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:359468415516:route-table/rtb-01f54b1420d269fc6",
            "id": "rtb-01f54b1420d269fc6",
            "owner_id": "359468415516",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04d2fd3f8c9d56645"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Terra_Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:359468415516:route-table/rtb-051d246fea7daf130",
            "id": "rtb-051d246fea7daf130",
            "owner_id": "359468415516",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04d2fd3f8c9d56645"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Terra_Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05636f423856030ec",
            "route_table_id": "rtb-01f54b1420d269fc6",
            "subnet_id": "subnet-07b62e17ec4135494"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.Terra_PvSN1",
            "aws_vpc.Terra_Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c777732a12dd6457",
            "route_table_id": "rtb-01f54b1420d269fc6",
            "subnet_id": "subnet-072a45c5e985aa801"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.Terra_PvSN2",
            "aws_vpc.Terra_Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bbac8d15809e8f76",
            "route_table_id": "rtb-051d246fea7daf130",
            "subnet_id": "subnet-07b6a9cff116d11ec"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.Terra_PSN1",
            "aws_vpc.Terra_Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03492cffbaca9b89f",
            "route_table_id": "rtb-051d246fea7daf130",
            "subnet_id": "subnet-00401ae9706348d5e"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.Terra_PSN2",
            "aws_vpc.Terra_Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Terra_PSN1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:359468415516:subnet/subnet-07b6a9cff116d11ec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07b6a9cff116d11ec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "359468415516",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Terra_PSN1"
            },
            "tags_all": {
              "Name": "Terra_PSN1"
            },
            "vpc_id": "vpc-04d2fd3f8c9d56645"
          },
          "dependencies": [
            "aws_vpc.Terra_Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Terra_PSN2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:359468415516:subnet/subnet-00401ae9706348d5e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00401ae9706348d5e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "359468415516",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Terra_PSN2"
            },
            "tags_all": {
              "Name": "Terra_PSN2"
            },
            "vpc_id": "vpc-04d2fd3f8c9d56645"
          },
          "dependencies": [
            "aws_vpc.Terra_Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Terra_PvSN1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:359468415516:subnet/subnet-07b62e17ec4135494",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07b62e17ec4135494",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "359468415516",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Terra_PvSN1"
            },
            "tags_all": {
              "Name": "Terra_PvSN1"
            },
            "vpc_id": "vpc-04d2fd3f8c9d56645"
          },
          "dependencies": [
            "aws_vpc.Terra_Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Terra_PvSN2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:359468415516:subnet/subnet-072a45c5e985aa801",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-072a45c5e985aa801",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "359468415516",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Terra_PvSN2"
            },
            "tags_all": {
              "Name": "Terra_PvSN2"
            },
            "vpc_id": "vpc-04d2fd3f8c9d56645"
          },
          "dependencies": [
            "aws_vpc.Terra_Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Terra_Vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:359468415516:vpc/vpc-04d2fd3f8c9d56645",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f640346bc4801670",
            "default_route_table_id": "rtb-0660424689aa77cd3",
            "default_security_group_id": "sg-09cecb03d7f06ea85",
            "dhcp_options_id": "dopt-84bcfefe",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04d2fd3f8c9d56645",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0660424689aa77cd3",
            "owner_id": "359468415516"
          }
        }
      ]
    }
  ]
}